Refactor: Update main layout and add category feature
Refactors the main activity UI for improved layout and clarity. Changes include:
- Renaming the "Pegawai" (Employee) card to "Cabang" (Branch).
- Updating card text, styles, and gradients for "Transaksi", "Produk", and "Kategori".
- Adding a new "Lainnya" (Other) section with a "Ubah Bahasa" (Change Language) card.
- Adjusting icons and background tints in the bottom navigation bar.

Adds the initial infrastructure for the category management feature, including:
- `DataKategoriActivity` and `ModKategoriActivity` with their respective layouts.
- RecyclerView item layout (`item_data_kategori`) for displaying categories.
- New drawables, colors, and manifest entries to support the feature.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PointOfSales">
         <activity
+            android:name=".Kategori.ModKategoriActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Kategori.DataKategoriActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
